tests/ui/expr/if/if-else-chain-missing-else.stderr
error[E0317]: `if` may be missing an `else` clause
  --> $DIR/if-else-chain-missing-else.rs:17:12
   |
LL |       } else if let Err(e) = res {
   |  ____________^
LL | |         return Err(e);
LL | |     };
   | |_____^ expected `i32`, found `()`
   |
   = note: `if` expressions without `else` evaluate to `()`
   = help: consider adding an `else` block that evaluates to the expected type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0317`.
